adding first action

--- a/.github/workflows/.github-actions-demo.yml
+++ b/.github/workflows/.github-actions-demo.yml
@@ -15,4 +15,10 @@ jobs:
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+      - run: echo "🍏 This job's status is ${{ job.status }}.
+      - name: My first step
+        # Uses the default branch of a public repository
+        uses: actions/heroku@main
+      - name: My second step
+        # Uses a specific version tag of a public repository
+        uses: actions/aws@v2.0.1
