--- a/.github/workflows/.github-actions-demo.yml
+++ b/.github/workflows/.github-actions-demo.yml
@@ -19,6 +19,7 @@ jobs:
       - name: My first step
         # Uses the default branch of a public repository
         uses: actions/heroku@main
+
       - name: My second step
-        # Uses a specific version tag of a public repository
-        uses: actions/aws@v2.0.1
+        # Uses the default branch of a public repository
+        uses: actions/heroku@main
